		- Settings are saved when switching scenes if the UI is open.
		- Add toggle for 'Auto-Resume Tournaments' to Advanced Gameplay section of settings.
	- Add an option to automatically load the savegame associated with an unfinished tournament, enter flight mode and resume the tournament on KSP launch.
	- Landed Kill Timer no longer affects vessels using Surface AIs.
ADDED/REMOVED/CHANGED SETTINGS VALUES
	- Performance Logging option removed as it did nothing.
	- InstaKill option removed (only affects lasers, use the InstaGib mutator instead).

v1.4.10.0
FIXES
	- General:
		- Consider 'splashed' vessels as 'landed' when spawning.
		- Symmetric parts are updated when armour type or hull material is adjusted in the editor.
		- Fix exception in updating radar locked targets.
		- Remove duplicate 'Detonate At Minimum Distance' toggle from non-modular missiles.
	- AI GUI:
		- Get the AI on the initial load when reverting to the editor.
		- Fix the AI GUI updating the values when switching vessels when using numeric fields.
		- Fix some surface AI values being initialised from the wrong variables in the AI GUI.
	- Mutators:
		- Fix speed mutators from setting engine throttle to 0.
		- Fix mutator mode interaction with weapon arenas and impulse weapons (gravity gun).
	- Weapons:
		- Fix some weapon selection criteria.
		- Fix lasers doing negative damage.
		- Fixes issue where AI would sometimes select rockets over guns for AtA when gun was superior option.
		- Fixes some typos in Stingray.cfg.
		- Torpedoes are no longer affected by Chaff.
		- Beam-guided munitions can now properly target splashed targets.
	- Battle Damage:
		- Heartbleed/Armor melting no longer occurs when game is paused
		- Adds check so empty fuel tanks will no longer catch fire if part temp exceeds fuel ignition point.
		- Autoigniting fuel tanks will only add a single fire.
		- Removes ability to add firebottles to SRBs.